data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3181.wast
;; 10. **Test 10: Function Call within Switch-case Block**      Description: Implement a WebAssembly function with a switch-case block where each case calls a different function with varied argument lengths and types. Analyze if the call correctly matches the case and handles argument consistency.      Constraint: Use diverse argument types and counts across switch cases.      Relation to Branch Target Resolution: Switch cases are label-based, and incorrect resolution affects control flow integrity around branching labels.

(assert_invalid
  (module
    (type (func (param i32)))
    (type (func (param i32 f64)))
    (func $call-within-switch (param i32)
      (block (result i32)
        (local.get 0)
        (br_table 0 1 2)
        (i32.const 0) ;; placeholder for case 0
        (call 1 (i32.const 10) (f64.const 20.0))
        (i32.const 1) ;; placeholder for case 1
        (call 1 (f64.const 10.0))
        (i32.const 2) ;; placeholder for case 2
        (call 1 (i32.const 10))
      )
    )
    (func (param i32 f64))
    (func (param i32))
  )
  "type mismatch"
)